Fix logo link to be readable and reasonable call-to-action

--- a/site_assets/css/main.sass
+++ b/site_assets/css/main.sass
@@ -43,23 +43,24 @@ body
   font-feature-settings: "liga", "dlig"
 
 .logo-readium
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif
   position: fixed
   left: 10px
   top: 10px
-  width: $rs*3
-  height: $rs*3
-  background-color: whitesmoke
+  width: 100px
+  background-color: #ffffff
+  opacity: 0.8
   overflow: hidden
   z-index: 99
-  .logo
-    display: block
-    position: absolute
-    top: $rs/2
-    left: $rs/2
-    width: $rs*2
-    height: $rs*2
-    background-size: cover
-    background-repeat: no-repeat
+  text-align: center
+  border-radius: 5px
+  padding: 8px
+  text-decoration: none
+  color: #333
+  font-weight: bold
+  font-size: 20px
+  border: 1px solid #ccc
+  box-shadow: 5px 5px 20px -10px rgba(0,0,0,0.75)
 
 .teaserimage
   height: 450px
